--- a/src/components/ReportModal.module.css
+++ b/src/components/ReportModal.module.css
@@ -380,4 +380,9 @@
     .finalizeInput {
         width: 100%;
     }
+
+    .actionBtn {
+        width: 40px;
+        height: 40px;
+    }
 }
