--- a/src/pages/AdminUsers.module.css
+++ b/src/pages/AdminUsers.module.css
@@ -393,4 +393,9 @@
         justify-content: flex-start;
         padding-top: 4px;
     }
+
+    .actionBtn {
+        width: 40px;
+        height: 40px;
+    }
 }
